<resources>
    <string name="app_name">QuickBook</string>
    <string name="action_settings">Settings</string>
    <string name="URL">URL</string>
    <string name="Text">Text</string>
    <string name="Next">-></string>
    <string name="Prev">(-</string>
    <string name="tenNext">--></string>
    <string name="tenPrev">(--</string>
    <string name="toStart">((</string>
    <string name="toEnd">>></string>
    <string name="inputHint">Input your text or URL here</string>
</resources>
