<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tankul.quickbook.main">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp"
        android:id="@+id/Reader">

        <TextView android:id="@+id/PlainTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:textSize="20dp"
            android:onClick="tapURL"/>


        <WebView android:id="@+id/WebPageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button android:id="@+id/tenNext"
            android:text="@string/tenNext"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="300dp"
            android:onClick="nextTenButton"
            />

        <Button android:id="@+id/tenPrev"
            android:text="@string/tenPrev"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="prevTenButton"
            android:layout_marginLeft="10dp"
            />

        <Button android:id="@+id/next"
            android:text="@string/Next"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/tenNext"
            android:layout_below="@id/tenNext"
            android:layout_marginTop="40dp"
            android:onClick="nextButton" />

        <Button android:id="@+id/prev"
            android:text="@string/Prev"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:onClick="prevButton"
            android:layout_below="@+id/tenPrev"
            android:layout_marginTop="40dp"
            android:layout_alignEnd="@+id/tenPrev" />

        <Button android:id="@+id/toEnd"
            android:text="@string/toEnd"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/tenNext"
            android:layout_above="@id/tenNext"
            android:layout_marginBottom="40dp"
            android:onClick="toEndButton"
            />

        <Button android:id="@+id/toStart"
            android:text="@string/toStart"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/tenPrev"
            android:layout_above="@id/tenPrev"
            android:layout_marginBottom="40dp"
            android:onClick="toStartButton"
            />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
